@@ -1,5 +1,9 @@
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Device.cc (Read_Disk_Layout): Again =) Decided to use switch ( blahblah ) instead of if else statements.
+
+2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Device.cc (Read_Disk_Layout): some internal codechanges. Looks a bit cleaner now.
 
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
